Ticket #21184 - Use setuptools

--- a/conf/genzone.conf
+++ b/conf/genzone.conf
@@ -9,9 +9,9 @@
 ###
 [general]
 # CORBA nameservice address (host[:port])
-nameservice= NAMESERVICE
+nameservice = localhost:2809
 # CORBA nameservice context (default: fred)
-context   = CONTEXT
+context   = fred
 # If the client should be verbose when generating zones (boolean)
 verbose   = 0
 # Space-separated list of zones for which zone files will be generated
@@ -33,7 +33,7 @@ zones     =
 # * number with % - percent change
 #maxchanges= 30
 # Directory path of the backup of the old zone file (default: same as zonedir)
-#backupdir = ZONEBACKUPDIR/0.2.4.e164.arpa
+#backupdir = /var/zonebackup/0.2.4.e164.arpa
 # Directory path to place the new zone file (default: the current directory)
 #zonedir   = /etc/bind
 
@@ -50,6 +50,6 @@ zones     =
 # * number with % - percent change
 #maxchanges= 10%
 # Directory path of the backup of the old zone file (default: same as zonedir)
-#backupdir = ZONEBACKUPDIR/cz
+#backupdir = /var/zonebackup/cz
 # Directory path to place the new zone file (default: the current directory)
 #zonedir   = /etc/bind
