--- a/conf/pyfred.conf
+++ b/conf/pyfred.conf
@@ -14,34 +14,34 @@
 # These settings are common to all modules.
 [General]
 # List of modules to load (separated by spaces)
-modules=MODULES
+modules=genzone mailer filemanager techcheck
 # pidfile is the file where the server records its process id
-pidfile=PIDFILE
+pidfile=/var/run/pyfred.pid
 # Host where PYFRED listens for CORBA calls
 # (empty value binds PYFRED to all available IP addresses)
 #host=
 # Port where PYFRED listens for CORBA calls
-port=PYFREDPORT
+port=2225
 
 #### Database settings
 # Database host or empty value for Unix socket
-dbhost=DBHOST
+dbhost=localhost
 # Database port
-dbport=DBPORT
+dbport=5432
 # Database name
-dbname=DBNAME
+dbname=fred
 # Database user name
-dbuser=DBUSER
+dbuser=fred
 # Database password (if required)
-dbpassword=DBPASS
+dbpassword=
 
 #### CORBA nameservice settings
 # Nameservice host
-nshost=NSHOST
+nshost=localhost
 # Nameservice port
-nsport=NSPORT
+nsport=2809
 # Nameservice context (check with the ``namectl`` command)
-nscontext=NSCONTEXT
+nscontext=fred
 
 #### Logging settings
 # Log handler selection:
@@ -62,7 +62,7 @@ loglevel=debug
 # Specify syslog facility (if handler is syslog)
 #logfacility=local1
 # Specify log file (if handler is a file)
-logfilename=LOGFILENAME
+logfilename=/var/log/fred-pyfred.log
 
 ###
 ### Zone-generating module configuration
@@ -95,7 +95,7 @@ testmode=on
 tester=
 # Path to sendmail binary (or a compatible program)
 #   default: /usr/sbin/sendmail
-sendmail=SENDMAIL
+sendmail=
 # The mailer module is dependent on file managing services. Set this
 # to the name under which this object is accessible in the CORBA nameservice.
 # Format: [contextName.]ObjectName
@@ -155,7 +155,7 @@ undeliveredperiod=0
 ###
 [FileManager]
 # Absolute path of the directory to store managed files
-rootdir=FILEMANAGERFILES
+rootdir=/var/lib/pyfred/filemanager/
 
 #### CORBA objects lifetime settings
 # Timeout (seconds) after which objects are considered idle
@@ -172,7 +172,7 @@ rootdir=FILEMANAGERFILES
 # Allow background perodic checks (in addition to checks requested by clients)
 #periodic_checks=on
 # Directory that contains scripts for technical tests
-scriptdir=TECHCHECKSCRIPTDIR
+scriptdir=/usr/libexec/pyfred
 # Service life of techcheck poll message (days)
 msgLifetime=7
 # Treshold (days) after which a tech.check is considered out-dated
@@ -187,7 +187,7 @@ missrounds=10
 # Path to the drill utility (part of ldns-utils) used for a dnssec related
 # technical test (key chase)
 #   default: /usr/bin/drill
-drill=DRILL
+drill=
 # Trusted key to be used by the drill utility for a signature chase run
 # (NOTE: actually if not set, dnssec signature chase test cannot be run)
 trusted_key=
