Ticket #31488 - Allow mailer sending to be disabled

--- a/conf/pyfred.conf
+++ b/conf/pyfred.conf
@@ -117,7 +117,7 @@ signing_cmd_retry_rounds=100
 #? keyfile_nic_cz=/etc/fred/cert/podpora.key
 #? certfile_mojeid_cz=/etc/fred/cert/podpora_mojeid.pem
 #? keyfile_mojeid_cz=/etc/fred/cert/podpora_mojeid.key
-# Interval (seconds) between sending email bulks
+# Interval (seconds) between sending email bulks (0=disable)
 sendperiod=30
 # Limit for the number of emails sent in one bulk
 sendlimit=100
